--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .app {
   background: url("./images/bg.png") 100% repeat-y;
+  background-size: cover;
   min-height: 100vh;
   width: 100%;
   display: grid;
